1.5/workdir/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  ports:
    # - name:  front
    #   protocol: TCP
    #   port:  80
    #   targetPort: 80
    - name: multitool
      protocol: TCP
      port: 80
      targetPort:  8080
