1.5/workdir/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  ports:
    - name:  front
      protocol: TCP
      port:  80
      targetPort: 80
    # - name: back
    #   protocol: TCP
    #   port: 80
    #   targetPort:  8080
