1.5/workdir/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: front
                port: 
                  number: 80
            path: /api
  # tls:
  #   - hosts:
  #     - example.com
  #     secretName: tls-secret
